contrast fix

--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -4,6 +4,9 @@ body {
   background-color: rgb(163, 18, 18);
   font-family: 'Comic Relief', sans-serif;
 }
+h2 {
+  color: rgb(56, 55, 55)
+}
 /** HEADER **/
 #header-nav {
   background-color: #f6b319;
@@ -18,7 +21,7 @@ body {
 }
 .navbar-brand h1 { /* Restaurant name */
   font-family: 'Comic Relief', serif;
-  color: gray;
+  color: rgb(56, 55, 55);
   font-size: 1.5em;
   text-transform: uppercase;
   font-weight: bold;
